<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garbage_sa_title"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/txv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/txv_title"
        app:layout_constraintStart_toStartOf="@id/txv_title"
        app:layout_constraintEnd_toEndOf="@id/txv_title"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/login_emailid"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/txv_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_login"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/login_emailid"
        app:layout_constraintStart_toStartOf="@id/login_emailid"
        app:layout_constraintEnd_toEndOf="@id/login_emailid"
        />

    <EditText
        android:id="@+id/login_password"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/quebra_linha_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <CheckBox
        android:id="@+id/show_hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/show_pwd"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:onClick="acessarRecuperaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/loginBtn"
        android:onClick="acessarTelaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_greyish"
        android:padding="3dp"
        android:text="@string/login"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/show_hide_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/createAccount"
        android:onClick="acessarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>