<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garbage_sa_title"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/txv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastro"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/txv_title"
        app:layout_constraintStart_toStartOf="@id/txv_title"
        app:layout_constraintEnd_toEndOf="@id/txv_title"
        />

    <EditText
        android:id="@+id/txv_name"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/fullName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_signup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_nome"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_name"
        app:layout_constraintStart_toStartOf="@id/txv_name"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/txv_email"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_email"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_email"
        app:layout_constraintStart_toStartOf="@id/txv_email"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/txv_telefone"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="8dp"
        android:hint="@string/mobileNumber"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_telefone"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_telefone"
        app:layout_constraintStart_toStartOf="@id/txv_telefone"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/txv_cpf"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/cpf"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_telefone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_cpf"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_cpf"
        app:layout_constraintStart_toStartOf="@id/txv_cpf"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/txv_senha"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/password"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_cpf"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_senha"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_senha"
        app:layout_constraintStart_toStartOf="@id/txv_senha"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <EditText
        android:id="@+id/txv_confirmaSenha"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/password"
        android:drawablePadding="8dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txv_senha"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <View
        android:id="@+id/quebra_linha_confirmaSenha"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        app:layout_constraintTop_toBottomOf="@id/txv_confirmaSenha"
        app:layout_constraintStart_toStartOf="@id/txv_confirmaSenha"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txv_confirmaSenha"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/solicitar_cpf"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/terms"
        app:layout_constraintStart_toStartOf="@id/terms"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/continueBtn"
        android:onClick="acessarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_greyish"
        android:padding="3dp"
        android:text="Cadastrar"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="560dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>